--- a/public/src/css/spendee.scss
+++ b/public/src/css/spendee.scss
@@ -53,7 +53,6 @@ nav,ul,ol{
         padding: 0;
         background: white;
         border-bottom: solid 1px #e5ebee;
-        box-shadow: 0 4px 8px 0 rgba(48,82,120,0.3);
 
         .KaKx{
             display: flex;
@@ -367,8 +366,11 @@ nav,ul,ol{
                                 border-radius: 8px;
                                 background-color: white;
                                 text-align: left;
-                                box-shadow: 0 4px 8px 0 rgba(48,82,120,0.8);
                                 transition: box-shadow .2s ease-in-out, -webkit-box-shadow .2s ease-in-out;
+
+                                &:hover{
+                                    box-shadow: 0 4px 8px 0 rgba(48,82,120,0.8);
+                                }
 
                                 ._2jD1{
                                     display: flex;
@@ -450,7 +452,6 @@ nav,ul,ol{
                                 line-height: 42px;
                                 background-color: #ffffff;
                                 color: $colorText;
-                                box-shadow: 0 4px 8px 0 rgba(48,82,120,0.8);
                                 transition: all .2s ease-in-out;
                                 width: 100%;
                                 padding: 0 8px;
@@ -465,6 +466,10 @@ nav,ul,ol{
                                 text-overflow: ellipsis;
                                 white-space: nowrap;
                                 border-radius: 8px !important;
+
+                                &:hover{
+                                    box-shadow: 0 4px 8px 0 rgba(48,82,120,0.8);
+                                }
                             }
                         }
 
@@ -910,7 +915,7 @@ nav,ul,ol{
 }
 
 .UzPn._10vh.zpcn{
-    z-index: 10;
+    z-index: 11;
     background: #f4f7fa;
     
     &::after {
