--- a/public/src/css/spendee.scss
+++ b/public/src/css/spendee.scss
@@ -1,4 +1,5 @@
 @import 'wallet/transactions';
+@import 'wallet/budgets';
 @import 'wallet/budgetsDetail';
 @import 'auth/login';
 @import 'settings/account';
