--- a/public/src/css/wallet/_budgetsDetail.scss
+++ b/public/src/css/wallet/_budgetsDetail.scss
@@ -487,6 +487,7 @@
 
                         background-color: #12c48b;
                         color: #fff;
+                        margin-bottom: 15px;
                     }
 
                     ._3WuR._3SdL._3qcS{
