--- a/public/src/css/spendee.css
+++ b/public/src/css/spendee.css
@@ -2662,40 +2662,6 @@
 .ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._13pY .j4fJ ._2BJz ._2wfn ._2Gra.required._1rNF ._1DjS.required ._3fMh.is-open .Select-menu-outer-wrapper {
   display: block;
 }
-.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._2axu {
-  margin-bottom: 0;
-  width: 70%;
-  margin: 10px auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex-shrink: 0;
-}
-.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._2axu ._3WuR._3SdL._2_oj {
-  margin-bottom: 0;
-  text-align: center;
-  background-color: #e5ebee;
-  color: #7b93a4;
-  box-shadow: none;
-  transition: all 0.2s ease-in-out;
-  position: relative;
-  display: block;
-  height: 34px;
-  line-height: 34px;
-  padding: 0 8px;
-  border-radius: 4px;
-  outline: none;
-  font-size: 14px;
-  font-weight: 600;
-  border: none;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-.ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._2axu ._3WuR._3SdL._2_oj:checked {
-  background-color: #12c48b;
-  color: #fff;
-}
 
 ._3u9e {
   background: white;
@@ -3116,6 +3082,7 @@
 .ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._2axu ._3WuR._3SdL._2_oj {
   background-color: #12c48b;
   color: #fff;
+  margin-bottom: 15px;
 }
 .ReactModal__Content.ReactModal__Content--after-open._2RxW.otWy ._3EUw form ._2ZwS._3U03._2VOV ._2axu ._3WuR._3SdL._2_oj:disabled {
   background-color: #e5ebee;
